--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "connect-state": {
@@ -123,6 +123,50 @@
           }
         }
       }
-    }},
-  "defaultProject": "connect-state"
+    },
+    "react-controls": {
+      "projectType": "library",
+      "root": "projects/react-controls",
+      "sourceRoot": "projects/react-controls/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/react-controls/tsconfig.lib.json",
+            "project": "projects/react-controls/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/react-controls/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/react-controls/src/test.ts",
+            "tsConfig": "projects/react-controls/tsconfig.spec.json",
+            "karmaConfig": "projects/react-controls/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/react-controls/tsconfig.lib.json",
+              "projects/react-controls/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "connect-state",
+  "cli": {
+    "analytics": "a1009b5d-1e35-4eba-999d-723845d743af"
+  }
 }
