--- a/package.json
+++ b/package.json
@@ -12,25 +12,30 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.0-rc.8",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~9.0.0-rc.8",
     "@angular/compiler": "~9.0.0-rc.8",
     "@angular/core": "~9.0.0-rc.8",
     "@angular/forms": "~9.0.0-rc.8",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~9.0.0-rc.8",
     "@angular/platform-browser-dynamic": "~9.0.0-rc.8",
     "@angular/router": "~9.0.0-rc.8",
+    "react": "^0.0.0-experimental-f42431abe",
+    "react-dom": "^0.0.0-experimental-f42431abe",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.0-rc.8",
+    "@angular-devkit/build-ng-packagr": "~0.900.0-rc.8",
     "@angular/cli": "~9.0.0-rc.8",
     "@angular/compiler-cli": "~9.0.0-rc.8",
     "@angular/language-service": "~9.0.0-rc.8",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -39,9 +44,13 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^9.0.0-rc.5",
     "protractor": "~5.4.2",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.6.4"
-  }
+  },
+  "workspaces": [
+    "projects/*"
+  ]
 }
