--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "baseUrl": "./",
     "outDir": "./dist",
     "sourceMap": true,
@@ -17,7 +19,18 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "react-controls": [
+        "dist/react-controls",
+        "projects/react-controls"
+      ],
+      "react-controls/*": [
+        "dist/react-controls/*",
+        "projects/react-controls/*"
+      ]
+    },
+    "jsx": "react"
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
